--- a/res/layout/activity_welcome.xml
+++ b/res/layout/activity_welcome.xml
@@ -1,10 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#FFF" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/welcome_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -14,12 +15,12 @@
         android:src="@drawable/nearby__11" />
 
     <ImageButton
-        android:id="@+id/imageButton1"
+        android:id="@+id/nearBy_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
+        android:layout_below="@+id/welcome_logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:contentDescription="@string/welcome_whats_around_button"
         android:src="@drawable/nearby__07" />
 
