--- a/res/layout/activity_nearby.xml
+++ b/res/layout/activity_nearby.xml
@@ -13,6 +13,7 @@
         android:layout_marginRight="21dp"
         android:layout_marginTop="21dp"
         android:background="@null"
+        android:contentDescription="@string/refresh_description"
         android:src="@drawable/refresh_button" />
 
     <TextView
@@ -21,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/refreshButton"
         android:layout_centerHorizontal="true"
-        android:text="Places found near you!"
+        android:text="@string/places_near_you"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
