--- a/res/layout/venues_fragment.xml
+++ b/res/layout/venues_fragment.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/imageView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="Place Image"
+                android:contentDescription="@string/place_image"
                 android:layout_gravity="center"
                 android:src="@drawable/nearby__04" />
         </TableRow>
